fix: align media sidebar behavior
Use the same sidebar visibility behavior on media detail pages as the rest of the site and remove the detail-page dim overlay.

--- a/frontend/src/static/js/pages/styles/MediaPage.scss
+++ b/frontend/src/static/js/pages/styles/MediaPage.scss
@@ -1,10 +1,6 @@
 @import '../../../css/includes/_variables.scss';
 @import '../../../css/includes/_variables_dimensions.scss';
 
-.visible-sidebar .page-main-wrap {
-	padding-left: 0;
-}
-
 .media-author-actions {
 	.popup-message-bottom {
 		button {
